--- a/style.css
+++ b/style.css
@@ -93,10 +93,16 @@ img {
 }
 .container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(4, 1fr); */
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   column-gap: 2rem;
   margin: 1rem;
   justify-content: center;
+}
+@media screen and (max-width: 1104px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 @media screen and (max-width: 700px) {
   .container {
